--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -68,9 +68,10 @@
         </div>
 
         <!-- Section for fetching the status of direct payments -->
-        <div>
-            <button id="fetchDirectPaymentStatusBtn">Fetch Direct Payment Status</button>
-        </div>
+        
+        <!-- Button to fetch the status of direct payments -->
+        <button id="fetchDirectPaymentStatusBtn">Fetch Direct Payment Status</button>
+
 
         <!-- Section to display the status of direct payments -->
         <div id="directPaymentStatus"></div>
