--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -15,12 +15,13 @@
             margin: 0;
         }
         .container {
-            width: 400px; /* Adjust the width as needed */
+            width: 900px; /* Adjust the width to 900px */
+            margin: 0 auto; /* Center the container horizontally */
             padding: 20px;
             border: 1px solid #ccc;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
+            text-align: left; /* Align content to the left */
         }
         .container > div {
             margin-bottom: 10px;
