--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -89,6 +89,10 @@
         </div>
 
         <div style="margin-top: 20px;">
+        <!-- HTML element to display contract balance -->
+            <div id="contractBalance"></div>
+
+        <!-- Button to view contract balance -->
             <button id="viewContractBalanceBtn">View Contract Balance</button>
         </div>
 
