--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -85,7 +85,9 @@
 
         <!-- Additional buttons with spacing -->
         <div style="margin-top: 20px;">
-            <button id="withdrawFundsBtn">Withdraw Funds</button>
+            <!-- Button to withdraw funds -->
+        <button id="withdrawFundsBtn">Withdraw Funds</button>
+
         </div>
 
         <div style="margin-top: 20px;">
