--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -92,10 +92,9 @@
 
         <div style="margin-top: 20px;">
         <!-- HTML element to display contract balance -->
-            <div id="contractBalance"></div>
-
-        <!-- Button to view contract balance -->
             <button id="viewContractBalanceBtn">View Contract Balance</button>
+            <div id="contractBalanceResult">Contract Balance: </div>
+
         </div>
 
         <div style="margin-top: 20px;">
