--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -91,9 +91,9 @@
         </div>
 
         <div style="margin-top: 20px;">
-        <!-- HTML element to display contract balance -->
-            <button id="viewContractBalanceBtn">View Contract Balance</button>
-            <div id="contractBalanceResult">Contract Balance: </div>
+      <button id="displayNFTContractBalanceBtn">Display NFT Contract Balance</button>
+<div id="nftContractBalanceResult">NFT Contract Balance: </div>
+
 
         </div>
 
