--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -102,7 +102,12 @@
         </div>
 
         <div style="margin-top: 20px;">
-            <button id="fetchSalesBtn">Fetch Sales</button>
+           <!-- HTML button to fetch sales -->
+<button id="fetchSalesBtn">Fetch Sales</button>
+
+<!-- Placeholder for displaying sales data -->
+<div id="salesData"></div>
+
         </div>
     </div>
     <script src="dash-test.js"></script> <!-- Link to the JavaScript file -->
