--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -98,7 +98,9 @@
         </div>
 
         <div style="margin-top: 20px;">
-            <button id="triggerEmergencyStopBtn">Trigger Emergency Stop</button>
+            <!-- HTML button to trigger emergency stop -->
+<button id="emergencyStopBtn">Trigger Emergency Stop</button>
+
         </div>
 
         <div style="margin-top: 20px;">
