--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -99,7 +99,9 @@
 
         <div style="margin-top: 20px;">
             <!-- HTML button to trigger emergency stop -->
-<button id="emergencyStopBtn">Trigger Emergency Stop</button>
+<button id="activateEmergencyStopBtn">Activate Emergency Stop</button>
+<button id="deactivateEmergencyStopBtn">Deactivate Emergency Stop</button>
+
 
         </div>
 
