--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -86,7 +86,8 @@
         <!-- Additional buttons with spacing -->
         <div style="margin-top: 20px;">
             <!-- Button to withdraw funds -->
-        <button id="withdrawFundsBtn">Withdraw Funds</button>
+        <button id="withdrawFundsButton">Withdraw Funds</button>
+
 
         </div>
 
