--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -43,6 +43,15 @@
             <button id="revokeUserBtn">Revoke User</button>
         </div>
 
+        
+         <!-- Section for setting a deault affiliate -->
+        <div id="revokeUserSection">
+            <input type="text" id="setDefaultAffiliate" placeholder="Enter user address">
+            <button id="setDefaultAffiliateBtn">Set Default Affiliate</button>
+
+        </div>
+        
+
         <!-- Section for approving and registering an affiliate -->
         <div>
             <input type="text" id="affiliateAddress" placeholder="Enter Affiliate Address" required>
