--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -44,12 +44,12 @@
         </div>
 
         
-         <!-- Section for setting a deault affiliate -->
-        <div id="revokeUserSection">
-            <input type="text" id="setDefaultAffiliate" placeholder="Enter user address">
-            <button id="setDefaultAffiliateBtn">Set Default Affiliate</button>
+         <!-- Section for setting a default affiliate -->
+<div id="setDefaultAffiliateSection">
+    <input type="text" id="setDefaultAffiliateInput" placeholder="Enter affiliate address">
+    <button id="setDefaultAffiliateBtn">Set Default Affiliate</button>
+</div>
 
-        </div>
         
 
         <!-- Section for approving and registering an affiliate -->
