--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -45,10 +45,12 @@
 
         
          <!-- Section for setting a default affiliate -->
-<div id="setDefaultAffiliateSection">
-    <input type="text" id="setDefaultAffiliateInput" placeholder="Enter affiliate address">
-    <button id="setDefaultAffiliateBtn">Set Default Affiliate</button>
-</div>
+<h1>Set Default Affiliate</h1>
+    <div>
+        <label for="affiliateAddress">Affiliate Address:</label>
+        <input type="text" id="affiliateAddress" placeholder="Enter Affiliate Ethereum Address">
+        <button id="setDefaultAffiliateBtn">Set Default Affiliate</button>
+    </div>
 
         
 
