--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -45,12 +45,13 @@
             <button id="revokeUserBtn">Revoke User</button>
         </div>
 
-        <!-- Section for setting a default affiliate -->
-        <div id="setDefaultAffiliateSection">
-            <label for="defaultAffiliateAddress">Affiliate Address:</label>
-            <input type="text" id="defaultAffiliateAddress" placeholder="Enter Affiliate Ethereum Address">
-            <button id="setDefaultAffiliateBtn">Set Default Affiliate</button>
-        </div>
+       <!-- Section for setting a default affiliate -->
+<div>
+    <label for="defaultAffiliateAddress">Affiliate Address:</label>
+    <input type="text" id="defaultAffiliateAddress" placeholder="Enter Affiliate Ethereum Address">
+    <button id="setDefaultAffiliateBtn">Set Default Affiliate</button>
+</div>
+
 
         <!-- Section for approving and registering an affiliate -->
         <div id="approveRegisterAffiliateSection">
