--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1,1 +1,20 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web3 Contract Interaction</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+<div class="container">
+    <h1>Web3 Contract Interaction</h1>
+    <div>
+        <!-- Your content goes here -->
+    </div>
+</div>
+
+</body>
+</html>
