--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web3 Contract Interaction</title>
+    <script src="https://cdn.jsdelivr.net/npm/ethers@5.2/dist/ethers.umd.min.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
