--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -4,18 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web3 Contract Interaction</title>
+    <title>NFT Marketplace</title>
     <script src="https://cdn.jsdelivr.net/npm/ethers@5.2/dist/ethers.umd.min.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<div class="container">
-    <h1>Web3 Contract Interaction</h1>
-    <div>
-        <!-- Your content goes here -->
+    <div id="marketplace">
+        <h1>NFT Marketplace</h1>
+        <div id="listings">
+            <!-- Listings will be displayed here -->
+        </div>
     </div>
-</div>
+
+    <script src="web3Setup.js"></script>
+    <script src="contractsSetup.js"></script>
+    <script src="marketplace.js"></script>
+</body>
 
 </body>
 </html>
