--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -9,16 +9,48 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="marketplace">
+    <div class="container">
         <h1>NFT Marketplace</h1>
         <div id="listings">
-            <!-- Listings will be displayed here -->
+            <!-- Listing of NFTs for sale will be displayed here -->
         </div>
+        <hr>
+        <h2>List NFT for Sale</h2>
+        <form id="listNFTForm">
+            <div>
+                <label for="tokenId">Token ID:</label>
+                <input type="number" id="tokenId" name="tokenId" required>
+            </div>
+            <div>
+                <label for="price">Price:</label>
+                <input type="number" id="price" name="price" required>
+            </div>
+            <div>
+                <input type="submit" value="List NFT">
+            </div>
+        </form>
+        <hr>
+        <h2>Buy NFT</h2>
+        <form id="buyNFTForm">
+            <div>
+                <label for="tokenIdBuy">Token ID:</label>
+                <input type="number" id="tokenIdBuy" name="tokenIdBuy" required>
+            </div>
+            <div>
+                <label for="affiliate">Affiliate Address:</label>
+                <input type="text" id="affiliate" name="affiliate">
+            </div>
+            <div>
+                <input type="submit" value="Buy NFT">
+            </div>
+        </form>
+        <!-- Include your JavaScript files -->
+        <script src="web3Setup.js"></script>
+        <script src="contractsSetup.js"></script>
+        <script src="NFTmarketplace.js"></script>
+        <script src="marketplace.js"></script>
+        <script src="main.js"></script> <!-- Your main JavaScript file for page functionality -->
     </div>
-
-    <script src="web3Setup.js"></script>
-    <script src="contractsSetup.js"></script>
-    <script src="marketplace.js"></script>
 </body>
 
 </body>
