--- a/dashboard/mint.html
+++ b/dashboard/mint.html
@@ -24,7 +24,7 @@
     </form>
 
     <!-- Include your JavaScript file -->
-    <script src="./js/NFTMint.js"></script>
+    <script src="js/NFTMint.js" type="module"></script>
 </body>
 
 </body>
