--- a/dashboard/mint.html
+++ b/dashboard/mint.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MINT Page</title>
-    <script src="https://cdn.jsdelivr.net/npm/ethers@5.2/dist/ethers.umd.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/ethers@5.2/dist/ethers.umd.min.js" type="module"></script>
+
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
