--- a/dashboard/mint.html
+++ b/dashboard/mint.html
@@ -24,6 +24,8 @@
         <button type="submit">Mint NFT</button>
     </form>
 
+    <button></button>
+
     <!-- Include your JavaScript file -->
     <script src="js/NFTMint.js" type="module"></script>
 
