--- a/dashboard/mint.html
+++ b/dashboard/mint.html
@@ -11,23 +11,18 @@
     <div class="container">
         <h1>Mint an NFT</h1>
         <form id="mintForm">
-            <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-            </div>
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required><br>
 
-            <div class="form-group">
-                <label for="tokenURI">Token URI:</label>
-                <input type="text" id="tokenURI" name="tokenURI" required>
-            </div>
+    <label for="tokenURI">Token URI:</label>
+    <input type="text" id="tokenURI" name="tokenURI" required><br>
 
-            <div class="form-group">
-                <label for="price">Price:</label>
-                <input type="number" id="price" name="price" required>
-            </div>
+    <label for="price">Price:</label>
+    <input type="number" id="price" name="price" required><br>
 
-            <button type="submit" class="btn">Mint NFT</button>
-        </form>
+    <button type="submit">Mint NFT</button> <!-- This is the button -->
+</form>
+
     </div>
 
     <!-- Include your JavaScript file -->
