--- a/dashboard/mint.html
+++ b/dashboard/mint.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <h1>Mint an NFT</h1>
+
         <form id="mintForm">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required><br>
@@ -20,8 +21,9 @@
     <label for="price">Price:</label>
     <input type="number" id="price" name="price" required><br>
 
-    <button type="submit">Mint NFT</button> <!-- This is the button -->
+    <button type="button" id="mintButton">Mint NFT</button> <!-- Changed type to "button" -->
 </form>
+
 
     </div>
 
