--- a/dashboard/mint.html
+++ b/dashboard/mint.html
@@ -21,7 +21,9 @@
     <label for="price">Price:</label>
     <input type="number" id="price" name="price" required><br>
 
-    <button type="button" id="mintButton">Mint NFT</button> <!-- Changed type to "button" -->
+    <button type="submit" value="List NFT" id="mintButton"> Mint NFT </button> <!-- Changed type to "button" -->
+
+            
 </form>
 
 
