--- a/dashboard/mint.html
+++ b/dashboard/mint.html
@@ -10,23 +10,21 @@
 <body>
     <div class="container">
         <h1>Mint an NFT</h1>
-
         <form id="mintForm">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required><br>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required><br>
 
-    <label for="tokenURI">Token URI:</label>
-    <input type="text" id="tokenURI" name="tokenURI" required><br>
+            <label for="tokenURI">Token URI:</label>
+            <input type="text" id="tokenURI" name="tokenURI" required><br>
 
-    <label for="price">Price:</label>
-    <input type="number" id="price" name="price" required><br>
+            <label for="price">Price:</label>
+            <input type="number" id="price" name="price" required><br>
 
-    <button type="submit" value="List NFT" id="mintButton"> Mint NFT </button> <!-- Changed type to "button" -->
-
-            
-</form>
-
-
+            <button type="submit" id="mintButton">Mint NFT</button> <!-- Changed type to "button" -->
+        </form>
+        
+        <!-- Display NFT ID -->
+        <div id="nftIdDisplay"></div>
     </div>
 
     <!-- Include your JavaScript file -->
