--- a/claim/index.html
+++ b/claim/index.html
@@ -41,7 +41,7 @@
     <footer>
         <p>&copy; 2024 PLRT Token. Redefining Licensed Digital Content.</p>
     </footer>
-    <script type="module" src="utils.js"></script>
-    <script type="module" src="custom-script.js"></script>
+    <script type="module" src="js/utils.js"></script>
+    <script type="module" src="js/custom-script.js"></script>
 </body>
 </html>
