--- a/claim/index.html
+++ b/claim/index.html
@@ -42,6 +42,6 @@
         <p>&copy; 2024 PLRT Token. Redefining Licensed Digital Content.</p>
     </footer>
     <script type="module" src="js/utils.js"></script>
-    <script type="module" src="js/custom-script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
