--- a/claim/index.html
+++ b/claim/index.html
@@ -21,7 +21,8 @@
                 <label>Your Connected Wallet Address:</label>
                 <span id="walletAddress"></span>
             </div>
-  
+  <p><strong>Total Allocation:</strong> <span id="totalAllocation"></span> PLRT</p>
+
         </section>
 
         <section id="vestingDetailsDisplay" class="info-item" style="display: none;">
