--- a/claim/index.html
+++ b/claim/index.html
@@ -21,7 +21,7 @@
                 <label>Your Connected Wallet Address:</label>
                 <span id="walletAddress"></span>
             </div>
-  <p><strong>Total Allocation:</strong> <span id="totalAllocation"></span> PLRT</p>
+
 
         </section>
 
@@ -43,6 +43,6 @@
         <p>&copy; 2024 PLRT Token. Redefining Licensed Digital Content.</p>
     </footer>
     <script type="module" src="js/utils.js"></script>
-    <script type="module" src="js/script.js"></script>
+    <script type="module" src="js/script1.js"></script>
 </body>
 </html>
