--- a/claim/index.html
+++ b/claim/index.html
@@ -43,6 +43,6 @@
         <p>&copy; 2024 PLRT Token. Redefining Licensed Digital Content.</p>
     </footer>
     <script type="module" src="js/utils.js"></script>
-    <script type="module" src="js/script.js"></script>
+    <script type="module" src="js/script2.js"></script>
 </body>
 </html>
