--- a/claim/index.html
+++ b/claim/index.html
@@ -14,15 +14,12 @@
     <main>
         <section class="wallet-connect">
             <h2 id="connectWalletText">Connect Your Wallet to Withdraw PLRT Tokens</h2>
-<button id="connectWalletButton" class="button">Connect Wallet</button>
+            <button id="connectWalletButton" class="button">Connect Wallet</button>
 
-            
             <div id="walletAddressDisplay" class="info-item" style="display: none;">
                 <label>Your Connected Wallet Address:</label>
                 <span id="walletAddress"></span>
             </div>
-
-
         </section>
 
         <section id="vestingDetailsDisplay" class="info-item" style="display: none;">
@@ -37,6 +34,14 @@
             <button id="withdrawTokensButton" class="button">Withdraw Tokens</button>
             <p id="withdrawalStatus"></p>
         </section>
+
+        <!-- Add a div for team membership details -->
+        <div id="teamMembershipDetails" class="info-item" style="display: none;">
+            <!-- Add content for team membership details here -->
+            <h3>Team Membership Details:</h3>
+            <p>You are a member of the PLRT team.</p>
+            <!-- Add more content as needed -->
+        </div>
     </main>
 
     <footer>
