--- a/claim/index.html
+++ b/claim/index.html
@@ -22,7 +22,7 @@
             </div>
         </section>
 
-        <section id="vestingDetailsDisplay" class="info-item" style="display: none;">
+        <section id="vestingDetailsDisplay" class="info-item" style="display: block;">
             <h3>Vesting Details:</h3>
             <p><strong>Total Allocation:</strong> <span id="totalAllocation"></span> PLRT</p>
             <p><strong>Amount Withdrawn:</strong> <span id="amountWithdrawn"></span> PLRT</p>
