--- a/claim/index.html
+++ b/claim/index.html
@@ -36,7 +36,7 @@
         
             <!-- Add a div for team membership details -->
             <div id="teamMembershipDetails" class="info-item" style="display: none;">
-                <!-- Add content for team membership details here -->
+                <!-- Team membership details will be displayed here -->
             </div>
         
         </section>
