--- a/claim/index.html
+++ b/claim/index.html
@@ -24,12 +24,12 @@
 
         <section id="vestingDetailsDisplay" class="info-item" style="display: none;">
             <h3>Vesting Details:</h3>
-            <p><strong>Total Allocation:</strong> <span id="totalAllocation"></span> PLRT</p>
-            <p><strong>Amount Withdrawn:</strong> <span id="amountWithdrawn"></span> PLRT</p>
-            <p><strong>Available to Withdraw:</strong> <span id="availableToWithdraw"></span> PLRT</p>
+            <p><strong>Total Allocation:</strong> <span id="totalAllocation"></span></p>
+            <p><strong>Amount Withdrawn:</strong> <span id="amountWithdrawn"></span></p>
+            <p><strong>Available to Withdraw:</strong> <span id="availableToWithdraw"></span></p>
             <p><strong>Vesting Start:</strong> <span id="vestingStart"></span></p>
             <p><strong>Last Withdrawal:</strong> <span id="lastWithdrawal"></span></p>
-            <p><strong>Tokens Available to Withdraw:</strong> <span id="tokensAvailableForWithdrawal"></span> PLRT</p>
+            <p><strong>Tokens Available to Withdraw:</strong> <span id="tokensAvailableForWithdrawal"></span></p>
             <p><strong>Days until next withdrawal:</strong> <span id="daysUntilNextWithdrawal"></span></p>
             <button id="withdrawTokensButton" class="button">Withdraw Tokens</button>
             <p id="withdrawalStatus"></p>
