--- a/claim/index.html
+++ b/claim/index.html
@@ -15,30 +15,23 @@
         <section class="wallet-connect">
             <h2 id="connectWalletText">Connect Your Wallet to Withdraw PLRT Tokens</h2>
             <button id="connectWalletButton" class="button">Connect Wallet</button>
-
             <div id="walletAddressDisplay" class="info-item" style="display: none;">
                 <label>Your Connected Wallet Address:</label>
-                <span id="walletAddress"></span>
+                <span id="walletAddress">[Wallet Address]</span>
             </div>
         </section>
 
-        <section id="vestingDetailsDisplay" class="info-item" style="display: none;">
+        <section id="vestingDetailsDisplay" style="display: none;">
             <h3>Vesting Details:</h3>
-            <p><strong>Total Allocation:</strong> <span id="totalAllocation"></span></p>
-            <p><strong>Amount Withdrawn:</strong> <span id="amountWithdrawn"></span></p>
-            <p><strong>Available to Withdraw:</strong> <span id="availableToWithdraw"></span></p>
-            <p><strong>Vesting Start:</strong> <span id="vestingStart"></span></p>
-            <p><strong>Last Withdrawal:</strong> <span id="lastWithdrawal"></span></p>
-            <p><strong>Tokens Available to Withdraw:</strong> <span id="tokensAvailableForWithdrawal"></span></p>
-            <p><strong>Days until next withdrawal:</strong> <span id="daysUntilNextWithdrawal"></span></p>
+            <p><strong>Total Allocation:</strong> <span id="totalAllocation">[Loading...]</span></p>
+            <p><strong>Amount Withdrawn:</strong> <span id="amountWithdrawn">[Loading...]</span></p>
+            <p><strong>Available to Withdraw:</strong> <span id="availableToWithdraw">[Loading...]</span></p>
+            <p><strong>Vesting Start:</strong> <span id="vestingStart">[Loading...]</span></p>
+            <p><strong>Last Withdrawal:</strong> <span id="lastWithdrawal">[Loading...]</span></p>
+            <p><strong>Tokens Available to Withdraw:</strong> <span id="tokensAvailableForWithdrawal">[Loading...]</span></p>
+            <p><strong>Days until next withdrawal:</strong> <span id="daysUntilNextWithdrawal">[Loading...]</span></p>
             <button id="withdrawTokensButton" class="button">Withdraw Tokens</button>
             <p id="withdrawalStatus"></p>
-        
-            <!-- Add a div for team membership details -->
-            <div id="teamMembershipDetails" class="info-item" style="display: none;">
-                <!-- Team membership details will be displayed here -->
-            </div>
-        
         </section>
     </main>
 
