--- a/claim/index.html
+++ b/claim/index.html
@@ -21,6 +21,10 @@
             </div>
         </section>
 
+        <section id="roleDisplay" style="display: none;">
+            <h2>Your Role: <span id="userRole">[Loading...]</span></h2>
+        </section>
+
         <section id="vestingDetailsDisplay" style="display: none;">
             <h3>Vesting Details:</h3>
             <p><strong>Total Allocation:</strong> <span id="totalAllocation">[Loading...]</span></p>
