--- a/claim/index.html
+++ b/claim/index.html
@@ -9,13 +9,17 @@
     <div id="walletConnection">
         <button id="connectWalletButton">Connect Wallet</button>
     </div>
+    <div id="userDetails" style="display: none;">
+        <h2>User Role: <span id="userRole">N/A</span></h2>
+    </div>
     <div id="vestingDetails" style="display: none;">
         <h2>Vesting Details</h2>
-        <p id="allocation"></p>
-        <p id="claimedAmount"></p>
-        <p id="claimableAmount"></p>
-        <button id="claimTokensButton">Claim Tokens</button>
+        <p id="allocation">Total Allocation: </p>
+        <p id="claimedAmount">Claimed Amount: </p>
+        <p id="claimableAmount">Claimable Amount: </p>
+        <button id="claimTokensButton" style="display: none;">Claim Tokens</button>
     </div>
+    <div id="errorDisplay" style="color: red; display: none;"></div>
 
     <script type="module" src="js/main.js"></script>
 </body>
