--- a/claim/index.html
+++ b/claim/index.html
@@ -9,6 +9,12 @@
     <div id="walletConnection">
         <button id="connectWalletButton">Connect Wallet</button>
     </div>
+
+    <div id="userDetails" style="display: none;">
+    <h2>User Role: <span id="userRole">N/A</span></h2>
+    <p id="userAddress"></p> <!-- Display connected wallet address here -->
+</div>
+
     <div id="userDetails" style="display: none;">
         <h2>User Role: <span id="userRole">N/A</span></h2>
     </div>
