--- a/claim/index.html
+++ b/claim/index.html
@@ -11,6 +11,7 @@
     </div>
     <div id="userDetails" style="display: none;">
         <h2>User Role: <span id="userRole">N/A</span></h2>
+        <p id="userAddress">Your Connected Wallet Address: </p> <!-- Add this line -->
     </div>
     <div id="vestingDetails" style="display: none;">
         <h2>Vesting Details</h2>
