--- a/claim/index.html
+++ b/claim/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="connectWallet">
+    <div id="walletConnectiont">
         <button id="connectWalletButton">Connect Wallet</button>
     </div>
     <div id="userDetails" style="display: none;">
