--- a/claim/index.html
+++ b/claim/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="content" style="max-width: 800px; margin: auto;">
+    <!-- All your content goes here -->
+
+
     <div id="walletConnection">
         <button id="connectWalletButton">Connect Wallet</button>
     </div>
@@ -21,6 +25,8 @@
         <button id="claimTokensButton" style="display: none;">Claim Tokens</button>
     </div>
     <div id="errorDisplay" style="color: red; display: none;"></div>
+
+        </div>
 
     <script type="module" src="js/main.js"></script>
 </body>
