--- a/claim/index.html
+++ b/claim/index.html
@@ -19,7 +19,7 @@
     </div>
     <div id="vestingDetails" style="display: none;">
         <h2>Vesting Details</h2>
-        <p id="allocation">Total Allocation: </p>
+        <p id="totalPLRTAclaimable">Total Allocation: </p>
         <p id="claimedAmount">Claimed Amount: </p>
         <p id="claimableAmount">Claimable Amount: </p>
         <button id="claimTokensButton" style="display: none;">Claim Tokens</button>
