--- a/claim/index.html
+++ b/claim/index.html
@@ -7,26 +7,30 @@
 </head>
 <body>
     <div id="content" style="max-width: 800px; margin: auto;">
-    <!-- All your content goes here -->
-
-
-    <div id="walletConnection">
-        <button id="connectWalletButton">Connect Wallet</button>
-    </div>
-    <div id="userDetails" style="display: none;">
-        <h2>User Role: <span id="userRole">N/A</span></h2>
-        <p id="userAddress">Your Connected Wallet Address: </p> <!-- Add this line -->
-    </div>
-    <div id="vestingDetails" style="display: none;">
-        <h2>Vesting Details</h2>
-        <p id="totalPLRTAclaimable">Total Allocation: </p>
-        <p id="claimedAmount">Claimed Amount: </p>
-        <p id="claimableAmount">Claimable Amount: </p>
-        <button id="claimTokensButton" style="display: none;">Claim Tokens</button>
-    </div>
-    <div id="errorDisplay" style="color: red; display: none;"></div>
-
+        <!-- Wallet Connection Section -->
+        <div id="walletConnection">
+            <button id="connectWalletButton">Connect Wallet</button>
         </div>
+
+        <!-- User Details Section -->
+        <div id="userDetails" style="display: none;">
+            <h2>User Role: <span id="userRole">N/A</span></h2>
+            <p id="userAddress">Your Connected Wallet Address: </p>
+        </div>
+
+        <!-- Vesting Details Section -->
+        <div id="vestingDetails" style="display: none;">
+            <h2>Vesting Details</h2>
+            <!-- Updated to show total PLRT claimable -->
+            <p id="totalPLRTAclaimable">Total PLRT Claimable: </p>
+            <p id="claimedAmount">Claimed Amount: </p>
+            <p id="claimableAmount">Claimable Amount: </p>
+            <button id="claimTokensButton" style="display: none;">Claim Tokens</button>
+        </div>
+
+        <!-- Error Display Section -->
+        <div id="errorDisplay" style="color: red; display: none;"></div>
+    </div>
 
     <script type="module" src="js/main.js"></script>
 </body>
