--- a/claim/index.html
+++ b/claim/index.html
@@ -28,6 +28,25 @@
             <button id="claimTokensButton" style="display: none;">Claim Tokens</button>
         </div>
 
+        <div id="teamMemberDetails" style="display: none;">
+    <h2>Team Member Details</h2>
+    <!-- Team member specific details here -->
+</div>
+
+<div id="privateSaleDetails" style="display: none;">
+    <h2>Private Sale NFT Holder Details</h2>
+    <!-- Private sale NFT holder specific details here -->
+</div>
+
+<div id="treasuryDetails" style="display: none;">
+    <h2>Treasury Details</h2>
+    <p id="treasuryWallet">Treasury Wallet Address: </p>
+    <p id="treasuryTotalAllocation">Total Allocation: </p>
+    <p id="treasuryClaimedAmount">Claimed Amount: </p>
+    <p id="treasuryLastClaimTime">Last Claim Time: </p>
+</div>
+
+
         <!-- Error Display Section -->
         <div id="errorDisplay" style="color: red; display: none;"></div>
     </div>
