--- a/claim/index.html
+++ b/claim/index.html
@@ -28,24 +28,26 @@
             <button id="claimTokensButton" style="display: none;">Claim Tokens</button>
         </div>
 
+        <!-- Team Member Details Section -->
         <div id="teamMemberDetails" style="display: none;">
-    <h2>Team Member Details</h2>
-    <!-- Team member specific details here -->
-</div>
+            <h2>Team Member Details</h2>
+            <!-- Team member specific details here -->
+        </div>
 
-<div id="privateSaleDetails" style="display: none;">
-    <h2>Private Sale NFT Holder Details</h2>
-    <!-- Private sale NFT holder specific details here -->
-</div>
+        <!-- Private Sale NFT Holder Details Section -->
+        <div id="privateSaleDetails" style="display: none;">
+            <h2>Private Sale NFT Holder Details</h2>
+            <!-- Private sale NFT holder specific details here -->
+        </div>
 
-<div id="treasuryDetails" style="display: none;">
-    <h2>Treasury Details</h2>
-    <p id="treasuryWallet">Treasury Wallet Address: </p>
-    <p id="treasuryTotalAllocation">Total Allocation: </p>
-    <p id="treasuryClaimedAmount">Claimed Amount: </p>
-    <p id="treasuryLastClaimTime">Last Claim Time: </p>
-</div>
-
+        <!-- Treasury Details Section -->
+        <div id="treasuryDetails" style="display: none;">
+            <h2>Treasury Details</h2>
+            <p id="treasuryWallet">Treasury Wallet Address: </p>
+            <p id="treasuryTotalAllocation">Total Allocation: </p>
+            <p id="treasuryClaimedAmount">Claimed Amount: </p>
+            <p id="treasuryLastClaimTime">Last Claim Time: </p>
+        </div>
 
         <!-- Error Display Section -->
         <div id="errorDisplay" style="color: red; display: none;"></div>
