--- a/claim/index.html
+++ b/claim/index.html
@@ -14,7 +14,7 @@
 
         <!-- User Details Section -->
         <div id="userDetails" style="display: none;">
-            <h2>User Role: <span id="userRole">N/A</span></h2>
+            <h2>User Role: <span id="role">N/A</span></h2>
             <p id="userAddress">Your Connected Wallet Address: </p>
         </div>
 
